# movie-quotes-back/routes/api.php
@@ -31,6 +31,9 @@ Route::middleware('auth:sanctum')->group(function () {
 	Route::get('/user', [UserController::class, 'getUser']);
 });
 
+Route::post('/get-email-verification/{email}', [UserController::class, 'getEmailVerification']);
+Route::get('/is-password-verification-expired', [ForgotPasswordController::class, 'checkExpirationValidity']);
+
 Route::middleware(['auth:sanctum', 'verified'])->group(function () {
 	Route::post('/user/update', [UserController::class, 'updateUser']);
 
@@ -58,19 +61,19 @@ Route::middleware(['auth:sanctum', 'verified'])->group(function () {
 		Route::get('/search/{query}', [MovieController::class, 'filterMovies']);
 	});
 
-    Route::get('/genres', [GenreController::class, 'getAllGenres']);
+	Route::get('/genres', [GenreController::class, 'getAllGenres']);
 
-    Route::prefix('/search')->group(function () {
-        Route::get('/quotes/{query}', [SearchController::class, 'filterQuotes']);
-        Route::get('/movies/{query}', [SearchController::class, 'filterMovies']);
-    });
+	Route::prefix('/search')->group(function () {
+		Route::get('/quotes/{query}', [SearchController::class, 'filterQuotes']);
+		Route::get('/movies/{query}', [SearchController::class, 'filterMovies']);
+	});
 
-    Route::prefix('/notifications')->group(function () {
-        Route::get('/', [NotificationController::class, 'getAllNotifications']);
-        Route::post('/mark-all-as-read', [NotificationController::class, 'markAllAsRead']);
-    });
+	Route::prefix('/notifications')->group(function () {
+		Route::get('/', [NotificationController::class, 'getAllNotifications']);
+		Route::post('/mark-all-as-read', [NotificationController::class, 'markAllAsRead']);
+	});
 
-    Route::post('/notification/{notification}/mark-as-read', [NotificationController::class, 'markNotificationAsRead']);
+	Route::post('/notification/{notification}/mark-as-read', [NotificationController::class, 'markNotificationAsRead']);
 });
 
 Route::post('/login', [SessionController::class, 'login']);
@@ -78,9 +81,9 @@ Route::post('/logout', [SessionController::class, 'logout']);
 
 Route::post('/register', RegisterController::class);
 Route::get('/email/verify/{id}/{hash}', EmailVerificationController::class)
-    ->name('verification.verify');
+	->name('verification.verify');
 
-Route::post('/forgot-password', ForgotPasswordController::class)->name('password.email');
+Route::post('/forgot-password', [ForgotPasswordController::class, 'sendResetLink'])->name('password.email');
 Route::post('/reset-password', [ResetPasswordController::class, 'resetPassword'])->name('password.update');
 
 Route::get('/auth/google/redirect', [SocialiteGoogleController::class, 'handleRedirect']);
